--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 requests
 beautifulsoup4
 googletrans==4.0.0-rc1
-transformers==4.34.0
-torch==2.0.1
-sentencepiece
-protobuf
-numpy<2.0.0
+transformers
+torch==1.13.1
+flask  # ← 이 줄을 꼭 추가하세요!
+
