--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+flask
 requests
 beautifulsoup4
 googletrans==4.0.0-rc1
-transformers
-torch==1.13.1
-flask  # ← 이 줄을 꼭 추가하세요!
-
+transformers==4.36.2
+torch==2.0.1
+numpy<2
